--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -3,3 +3,4 @@ JWT_SECRET=replace_with_strong_secret
 ADMIN_EMAIL=admin@example.com
 ADMIN_PASSWORD=ChangeMe123!
 PORT=5000
+# Note: On first start, the server will auto-create the super admin using ADMIN_* if it doesn't exist.
