major ui changes

--- a/Backend/package.json
+++ b/Backend/package.json
@@ -8,7 +8,8 @@
     "start": "node app.js",
     "dev": "nodemon app.js",
     "seed:super": "node ./scripts/seedSuperAdmin.js",
-    "migrate:passwords": "node ./scripts/migratePasswords.js"
+    "migrate:passwords": "node ./scripts/migratePasswords.js",
+    "reset:admin": "node ./scripts/resetAdmin.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
